# HEG

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Frame.cpp  Frame.h  Input.h  Ray.h  Tracer.cpp  Tracer.h  Vec3.h  Window.cpp  Window.h  main.cpp  ray.h
App/: CMakeLists.txt  test.cpp
HEG/: Application.cpp  Application.h  CMakeLists.txt  Event.h  HEG.h  Log.cpp  Log.h  Renderer.h  Window.cpp  Window.h
